[package]
name = "artiqwest"
version = "0.1.15"
edition = "2024"
description = "A simple client for making http request over Tor with Arti."
license = "MIT"
repository = "https://github.com/basic-automation/artiqwest"
readme = "README.md"
keywords = ["tor", "http", "request", "client", "SOCKS"]
categories = ["network-programming", "web-programming::http-client"]


[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
bytes = "1.10.1"
anyhow = "1.0.97"
arti-client = { version = "0.28.0", features = ["full", "static"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.10", features = ["full"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-native-tls = "0.3.1"
tor-rtcompat = { version = "0.28.0", features = ["tokio", "native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
serde_json = "1.0.140"
reqwest = "0.12.15"

futures-util = { version = "0.3.31", default-features = false, features = [
        "sink",
        "std",
] }

tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tracing = "0.1.41"

uuid = { version = "1.16.0", features = [
        "v4",                # Lets you generate random UUIDs
        "fast-rng",          # Use a faster (but still sufficiently random) RNG
        "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

[dev-dependencies]
tracing-subscriber = "0.3.19"
