[package]
name = "artiqwest"
version = "0.2.4"
edition = "2024"
description = "A simple client for making http request over Tor with Arti."
license = "MIT"
repository = "https://github.com/basic-automation/artiqwest"
readme = "README.md"
keywords = ["tor", "http", "request", "client", "SOCKS"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
hyper = { version = "1.8.1", features = ["full"] }
bytes = "1.11.0"
anyhow = "1.0.100"
arti-client = { version = "0.38.0", features = ["full", "static"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.19", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tor-rtcompat = { version = "0.38.0", features = ["full", "tokio", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
reqwest = "0.13.1"

futures-util = { version = "0.3.31", default-features = false, features = [
        "sink",
        "std",
] }

tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = "0.1.44"

uuid = { version = "1.20.0", features = [
        "v4",                # Lets you generate random UUIDs
        "fast-rng",          # Use a faster (but still sufficiently random) RNG
        "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

tracing-subscriber = "0.3.22"

[dev-dependencies]
onyums = "0.2.4"
axum = { version = "0.8.8", features=["ws"] }
rand = "0.9.2"
serial_test = "3.3"
