[package]
name = "artiqwest"
version = "0.3.0"
edition = "2024"
description = "A simple client for making http request over Tor with Arti."
license = "MIT"
repository = "https://github.com/basic-automation/artiqwest"
readme = "README.md"
keywords = ["tor", "http", "request", "client", "SOCKS"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
hyper = { version = "1.10.1", features = ["full"] }
bytes = "1.12.0"
anyhow = "1.0.102"
arti-client = { version = "0.43.0", features = ["full", "static"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = ["full"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-native-tls = "0.3.1"
tor-rtcompat = { version = "0.43.0", features = ["full", "tokio", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
serde_json = "1.0.150"
reqwest = "0.13.4"

futures-util = { version = "0.3.32", default-features = false, features = [
        "sink",
        "std",
] }

tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
onyums = "0.3.0"
axum = { version = "0.8.9", features=["ws"] }
rand = "0.10.1"
serial_test = "3.5"
rustls = "0.23"
